[gd_scene load_steps=4 format=3 uid="uid://cemlj3oklnk2d"]

[ext_resource type="Script" uid="uid://dqvt54eqx3jac" path="res://Scripts/clickable_tile.gd" id="1_m65c2"]
[ext_resource type="Texture2D" uid="uid://d13fqw7s0oo7u" path="res://Sprites/apel.png" id="2_7ke8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjvhh"]
size = Vector2(368.502, 355.612)

[node name="clickable_tile" type="Node2D"]
script = ExtResource("1_m65c2")

[node name="main_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_7ke8o")

[node name="ItemArea" type="Area2D" parent="."]

[node name="square_area" type="CollisionShape2D" parent="ItemArea"]
position = Vector2(0.75824, -2.65384)
shape = SubResource("RectangleShape2D_jjvhh")

[connection signal="input_event" from="ItemArea" to="." method="_on_item_area_input_event"]
[connection signal="mouse_entered" from="ItemArea" to="." method="_on_item_area_mouse_entered"]
